# opencv-haar-train

./: .gitignore  README.md  negatives.txt  positives.txt  pyproject.toml
classifier/: stage0.xml
tools/: convertor.py  knife.py  mergevec.py
